Bug 1470229 part 1 - Make the starting-with check in nsTreeSanitizer::SanitizeAttributes nicer. r=hsivonen

MozReview-Commit-ID: 87mxrKKUfJD